modify a1 parts 4,5 - upgrade to 2019 version

--- a/assignment1/features_solution_yorko.ipynb
+++ b/assignment1/features_solution_yorko.ipynb
@@ -4,10 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <center> cs231n. [A1, part 5](http://cs231n.github.io/assignments2018/assignment1/). Image features exercise\n",
+    "# <center> cs231n 2019. [A1, part 5](http://cs231n.github.io/assignments2018/assignment1/). Image features exercise\n",
     "<img src='../img/cs231n_logo.png' width=70%>\n",
     "    \n",
-    "#### <center> **Solution by @yorko**\n",
+    "#### <center> **Solution by [Yury Kashnitsky](https://www.kaggle.com/kashnitsky) (@yorko)**\n",
     "\n",
     "*Complete and hand in this completed worksheet (including its outputs and any supporting code outside of the worksheet) with your assignment submission. For more details see the [assignments page](http://vision.stanford.edu/teaching/cs231n/assignments.html) on the course website.*\n",
     "\n",
@@ -394,7 +394,7 @@
     "### Inline question 1\n",
     "Describe the misclassification results that you see. Do they make sense?\n",
     "\n",
-    "**Your answer:** *Well, the mistakes made by the algorithm are often clear and can have an explanation: trucks are often classified as cars, deers are confused with dogs and so on. However, I've noticed several cases when SVM makes silly mistakes.*"
+    "$\\color{blue}{\\textit Your Answer:}$ *Well, the mistakes made by the algorithm are often clear and can have an explanation: trucks are often classified as cars, deers are confused with dogs and so on. However, I've noticed several cases when SVM makes silly mistakes.*"
    ]
   },
   {
@@ -1097,25 +1097,6 @@
     "\n",
     "test_acc = (best_net.predict(X_test_feats) == y_test).mean()\n",
     "print(test_acc)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Bonus: Design your own features!\n",
-    "\n",
-    "You have seen that simple image features can improve classification performance. So far we have tried HOG and color histograms, but other types of features may be able to achieve even better classification performance.\n",
-    "\n",
-    "For bonus points, design and implement a new type of feature and use it for image classification on CIFAR-10. Explain how your feature works and why you expect it to be useful for image classification. Implement it in this notebook, cross-validate any hyperparameters, and compare its performance to the HOG + Color histogram baseline."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Bonus: Do something extra!\n",
-    "Use the material and code we have presented in this assignment to do something interesting. Was there another question we should have asked? Did any cool ideas pop into your head as you were working on the assignment? This is your chance to show off!"
    ]
   }
  ],
