--- a/assignment1/two_layer_net_solution_yorko.ipynb
+++ b/assignment1/two_layer_net_solution_yorko.ipynb
@@ -4,10 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <center> cs231n. [A1, part 4](http://cs231n.github.io/assignments2018/assignment1/). Two-layer net\n",
+    "# <center> cs231n 2019. [A1, part 4](http://cs231n.github.io/assignments2018/assignment1/). Two-layer net\n",
     "<img src='../img/cs231n_logo.png' width=70%>\n",
     "    \n",
-    "#### <center> **Solution by @yorko**\n",
+    "#### <center> **Solution by [Yury Kashnitsky](https://www.kaggle.com/kashnitsky) (@yorko)**\n",
     "\n",
     "In this exercise we will develop a neural network with fully-connected layers to perform classification, and test it out on the CIFAR-10 dataset."
    ]
@@ -471,7 +471,12 @@
     "\n",
     "**Approximate results**. You should be aim to achieve a classification accuracy of greater than 48% on the validation set. Our best network gets over 52% on the validation set.\n",
     "\n",
-    "**Experiment**: You goal in this exercise is to get as good of a result on CIFAR-10 as you can, with a fully-connected Neural Network. For every 1% above 52% on the Test set we will award you with one extra bonus point. Feel free implement your own techniques (e.g. PCA to reduce dimensionality, or adding dropout, or adding features to the solver, etc.)."
+    "**Experiment**: You goal in this exercise is to get as good of a result on CIFAR-10 as you can, with a fully-connected Neural Network. For every 1% above 52% on the Test set we will award you with one extra bonus point. Feel free implement your own techniques (e.g. PCA to reduce dimensionality, or adding dropout, or adding features to the solver, etc.).\n",
+    "\n",
+    "**Explain your hyperparameter tuning process below.**\n",
+    "\n",
+    "$\\color{blue}{\\textit Your Answer:}$ *Typically you start with a wide range of hyperparameters, and then narrow down the search space around good values. You need to make sure that you don't get optimal loss (or accuracy) values with extreme values of hyperparameters, otherwise you need to change the range of values to try.\n",
+    "That's how I first defined good hidden size and a range of learning rate values. Then learning rate decay and reqularization strength. Not all history of experiments is shown in this notebook. Below we iterate over the final grid of hyperparameters.*"
    ]
   },
   {
@@ -864,6 +869,28 @@
    "source": [
     "test_acc = (best_net.predict(X_test) == y_test).mean()\n",
     "print('Test accuracy: ', test_acc)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Inline Question**\n",
+    "\n",
+    "Now that you have trained a Neural Network classifier, you may find that your testing accuracy is much lower than the training accuracy. In what ways can we decrease this gap? Select all that apply.\n",
+    "\n",
+    "1. Train on a larger dataset.\n",
+    "2. Add more hidden units.\n",
+    "3. Increase the regularization strength.\n",
+    "4. None of the above.\n",
+    "\n",
+    "$\\color{blue}{\\textit Your Answer:}$ *2*\n",
+    "\n",
+    "$\\color{blue}{\\textit Your Explanation:}$ *With validation curves, we see that validation accuracy goes on increasing, thus the algorithm is underfitted.*\n",
+    "\n",
+    "- 1 is incorrect - *Training on a larger dataset with **the same model** wouldn't help - the model will still be underfitting. However, with appropriate changes to model complexity, adding more labeled data is almost always a nice thing to do*\n",
+    "- 2 is correct - increasing model complexity is going to help\n",
+    "- 3 is incorrect - decreasing model complexity would only further cause underfitting"
    ]
   }
  ],
